test/files/neg/kind-poly-noflag.scala
object Test {
  // AnyKind shouldn't be usable as a type
  def foo: AnyKind = ???
  val foo2: AnyKind = ???

}
